# algeria-cities-django

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
algeria_cities/: admin.py  apps.py  models.py
algeria_cities/fixtures/: data.json
algeria_cities/migrations/: 0001_initial.py  0002_load_data.py
