[metadata]
name = algeria_cities
version = 0.1
description = Django package provides a complete list of all administrative provinces and cities in Algeria.
long_description = file: README.md
url = https://www.codingdz.com/
author = Tarek Berkane
author_email = tarekg320@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Database
    Natural Language :: French
    Natural Language :: Arabic

[options]
include_package_data = true
packages = 
    algeria_cities
    algeria_cities.fixtures
    algeria_cities.migrations

python_requires = >=3.8
install_requires =
    Django >= 4.2  